# india-market-news

./: README.md  pyproject.toml
.github/workflows/: fetch-news.yml  rate-limit-probe.yml
scripts/: benchmark_ci_pattern.py  benchmark_rate_limit.py  benchmark_rate_limit_aggressive.py  com.indiamarketnews.fetch.plist  probe_micro_batch.py  run_fetch_local.sh
src/india_market_news/: cli.py  fetcher.py  html_markdown.py  models.py  pipeline.py  supabase_store.py  zerodha.py
supabase/migrations/: 20260712100000_corp_action_details.sql
