[project]
name = "india-market-news"
version = "0.1.0"
description = "NSE market news and corporate actions from Zerodha Markets, stored in Supabase"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "html2text>=2024.2.26",
    "httpx>=0.27.0",
    "python-dateutil>=2.9.0",
    "supabase>=2.0.0",
]

[project.scripts]
india-market-news = "india_market_news.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
